# JeffLoop

./: .env  .env.example  CLAUDE.md  Dockerfile  MATURITY_ROTATION_COMPLETE.md  PROJECT_STATUS.md  SIGNAL_GENERATOR_COMPLETE.md  SPRINT1_TEST_SUMMARY.md  TCG_RADAR_SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_signals_schema.py  003_phase2_schema.py  004_synergy_schema.py  005_discord_profile.py  006_users_table.py  007_subscription_tier.py
docs/: API.md  DEPLOYMENT.md  PHASE3_SUMMARY.md  PHASE_1_COMPLETE.md
scripts/: add_user.py
src/: __init__.py  config.py  main.py
src/engine/: __init__.py  bundle.py  effective_price.py  fees.py  headache.py  maturity.py  price_trend.py  profit.py  rotation.py  seller_quality.py  trend.py  variant_check.py  velocity.py
src/events/: __init__.py  limitless.py  social_listener.py  synergy.py  triggers.py
tests/: conftest.py  test_bundle.py  test_cascade.py  test_condition_map.py  test_deep_link.py  test_delivery.py  test_ebay.py  test_effective_price.py  test_fees.py  test_forex.py  test_generator.py  test_headache.py  test_integration.py  test_limitless.py  test_maturity.py  test_poketrace.py  test_price_trend.py  test_profit.py  test_rotation.py  test_rotation_signals.py  test_scheduler.py  test_scraper.py  test_seller_quality.py  test_social_listener.py  test_synergy.py  test_telegram.py  test_trend.py  test_triggers.py  test_user_model.py  test_variant_check.py  test_velocity.py
(+37 files in other folders)
